Bug 210110: selection at end of line spans multiple lines in embedded test editor. r+sr=bzbarsky